General fixes
Organized views, fixed css horizontal scroll problem, changed error page
colours, added footer to fill empty space at bottom of page.

--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -1,17 +1,22 @@
 #error-header {
-	background-color: #1de9b6;
+	background-color: #0097a7;
 	color: #ffffff;
 
 	padding-top: 100px;
-	width: 100%;
+
+	-webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4);
+	-moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4);
+	box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4);
 }
 
-#top {
-	background-color: #0097a7;
-
+.section-wrapper {
 	width: 60%;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#top {
+	background-color: #EF5350;
 
 	-webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4);
 	-moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4);
@@ -26,10 +31,7 @@
 	background-color: #ffffff;
 	position: relative;
 
-	width: 60%;
 	margin-top: -20px;
-	margin-left: auto;
-	margin-right: auto;
 
 	-webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4);
 	-moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4);
@@ -93,7 +95,16 @@
 }
 
 @media (max-width: 900px) {
-	#bottom, #top {
+	.section-wrapper {
 		width: 100%;
+	}
+
+	#top, #bottom {
+		margin-left: 10px;
+		margin-right: 10px;
+	}
+
+	#bottom .subtitle {
+		width: auto;
 	}
 }
